# Inkstair

./: .gitignore  Fattibilità tecnica _ Modelli AI.docx
Ricerca, findings e brand ideation/: Il futuro della lettura_ raccontaci la tua esperienza (Risposte).xlsx  Ricerca.xlsx
backend/: main.py  manuscript_analysis_quadrant.py  pyproject.toml  requirements.txt
backend/pdf_analyzer/: editoriale_completo.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css  index.js
